examples/test/testpolicy5045.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5045
  namespace: namespace437
spec:
  podSelector:
    matchLabels:
      key5: value48
      key48: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value43
      podSelector:
        matchLabels:
          key45: value4
          key8: value4
          key39: value5
